<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/profilephoto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Anna"
                android:textColor="#fff"
                android:textSize="35sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Weclome"
                android:textColor="#fff"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_receipt_black_24dp" />

                <Button
                    android:id="@+id/recipe_btn"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="#00CED1"
                    android:text="@string/Recipe"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_event_note_black_24dp" />

                <Button
                    android:id="@+id/event_btn"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.31"
                    android:background="#00CED1"
                    android:text="@string/Event"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:weightSum="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_add_shopping_cart_black_24dp" />

                <Button
                    android:id="@+id/list_btn"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.75"
                    android:background="#00CED1"
                    android:text="@string/list"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
