<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/shopping" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="LISTS"
                android:textColor="#2F4F4F"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.02"
                    android:text="Select List"
                    android:textColor="#2F4F4F"
                    android:textSize="24sp" />
                <AutoCompleteTextView
                    android:id="@+id/listAutoComp"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.03" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/show_event"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:text="Show Events"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/del_list"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:text="Delete List"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EVENTS FOR THE LIST"
                    android:textColor="#2F4F4F"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Event"
                    android:textColor="#2F4F4F"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="No. of guests"
                    android:textColor="#2F4F4F"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Event Date"
                    android:textColor="#2F4F4F"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:weightSum="1">

                <ScrollView
                    android:id="@+id/event_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:textColor="#2F4F4F" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:text="Lookup Event"
                        android:textColor="#2F4F4F"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="5dp"
                    android:weightSum="1">

                    <AutoCompleteTextView
                        android:id="@+id/eventAutoComp"
                        android:layout_width="200dp"
                        android:layout_height="50dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/add_event"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:text="Add Event to List"
                        android:textStyle="bold" />
                    <Button
                        android:id="@+id/del_event"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:text="Delete Event from List"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:weightSum="1">

                <Button
                    android:id="@+id/shop_Btn"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="Generate shoppoing list"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_Btn"
                android:layout_width="140dp"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/Home_Page"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/event_btn"
                android:layout_width="140dp"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/Event_Page"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/rec_Btn"
                android:layout_width="140dp"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/Recipe_Page"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

